fix get  /currencies/RUB/USD
